content/programs/c++/2016/005-glfw-glew-move-square/compiling_error.txt
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp:82:35: warning: missing terminating " character
   const GLchar *fragment_source = "#version 150\n
                                   ^
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp:82:3: error: missing terminating " character
   const GLchar *fragment_source = "#version 150\n
   ^
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp:83:35: error: stray ‘\’ in program
                                   out vec4 outColor;\n
                                   ^
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp:85:35: error: stray ‘\’ in program
                                   void main() {\n
                                   ^
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp:86:37: error: stray ‘\’ in program
                                     outColor = vec4(1.0, 1.0, 1.0, 1.0);\n
                                     ^
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp:87:35: error: stray ‘\’ in program
                                   }\0";
                                   ^
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp:87:38: warning: missing terminating " character
                                   }\0";
                                      ^
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp:87:35: error: missing terminating " character
                                   }\0";
                                   ^
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp: In function ‘int main()’:
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp:83:35: error: ‘out’ was not declared in this scope
                                   out vec4 outColor;\n
                                   ^
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp:83:54: error: ‘n’ was not declared in this scope
                                   out vec4 outColor;\n
                                                      ^
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp:89:3: error: expected ‘;’ before ‘bool’
   bool running = true;
   ^
/home/frank/Desktop/frank/personal/programs/c++/2016/005-glfw-glew-move-square/main.cpp:91:10: error: ‘running’ was not declared in this scope
   while (running) {
          ^
